@@ -11,13 +11,13 @@ import javafx.scene.control.MenuItem;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.Modality;
-import javafx.stage.Popup;
 import javafx.stage.Stage;
 import model.services.DepartmentService;
 
 import java.io.IOException;
 import java.net.URL;
 import java.util.ResourceBundle;
+import java.util.function.Consumer;
 
 public class MainViewController implements Initializable {
 
@@ -32,17 +32,20 @@ public class MainViewController implements Initializable {
 
     @FXML
     public void onMenuItemSellerAction() {
+
         System.out.println("Seller Action");
     }
 
     @FXML
     public void onMenuItemDepartmentAction() {
-        loadView("DepartmentListView.fxml");
+        loadView("DepartmentListView.fxml", (DepartmentListController controller) -> {
+            controller.setDepartmentService(new DepartmentService());
+            controller.updateTableView();
+        });
     }
 
     @FXML
     public void onMenuItemAboutAction() {
-        //loadView("AboutView.fxml");
         loadViewPopUp("AboutView.fxml");
     }
 
@@ -51,23 +54,22 @@ public class MainViewController implements Initializable {
 
     }
 
-    private void loadView(String absoluteName) {
-        FXMLLoader loader = new FXMLLoader(getClass().getResource(absoluteName));
+    private <T> void loadView(String view, Consumer<T> initParameter) {
+        FXMLLoader loader = new FXMLLoader(getClass().getResource(view));
         try {
             VBox newVBox = loader.load();
 
             Scene scene = HelloApplication.getHelloApplicationScene();
             VBox mainVBox = (VBox) ((ScrollPane) scene.getRoot()).getContent();
 
-            Node mainMenu = mainVBox.getChildren().get(0);
+            Node mainMenu = mainVBox.getChildren().getFirst();
             mainVBox.getChildren().clear();
             mainVBox.getChildren().add(mainMenu);
             mainVBox.getChildren().addAll(newVBox.getChildren());
 
+            T consumer = loader.getController();
+            initParameter.accept(consumer);
 
-            DepartmentListController departmentListController = loader.getController();
-            departmentListController.setDepartmentService(new DepartmentService());
-            departmentListController.updateTableView();
         } catch (IOException e) {
             Alerts.showAlert("IO Exception",
                     "Error loading view",
@@ -76,7 +78,7 @@ public class MainViewController implements Initializable {
         }
     }
 
-    private void loadViewPopUp(String view){
+    private void loadViewPopUp(String view) {
         FXMLLoader loader = new FXMLLoader(getClass().getResource(view));
         try {
             VBox vBox = loader.load();
